cli/tests/snapshot/snapshots/snapshot__query_stderr_field_path_syntax_error.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: unexpected token
  ┌─ <query>:1:7
  │
1 │ input.+foo.baz
  │       ^

note: when parsing a field path on the command line
 = A field path must be a dot-separated list of fields. Special characters must be properly escaped, both for Nickel and for the shell.
 = For example: a field path `config."$port"` in Nickel source code must be written `config.\"\$port\"` or `'config."$port"'` on a POSIX shell


